ggml/69/373696c965ec7de733aa56040a05267d13a926/ggml-3-arm64-cpu/ctest_debug-make.log
+ make -j
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml.c.o
[  4%] Building CXX object examples/CMakeFiles/common.dir/common.cpp.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml-backend.c.o
[  4%] Building C object src/CMakeFiles/ggml.dir/ggml-alloc.c.o
[  5%] Building C object src/CMakeFiles/ggml.dir/ggml-quants.c.o
[  6%] Linking C shared library libggml.so
[  6%] Built target ggml
[  7%] Building CXX object tests/CMakeFiles/test-quantize-fns.dir/test-quantize-fns.cpp.o
[  8%] Building CXX object tests/CMakeFiles/test-opt.dir/test-opt.cpp.o
[ 10%] Building CXX object tests/CMakeFiles/test-grad0.dir/test-grad0.cpp.o
[ 10%] Building C object tests/CMakeFiles/test-mul-mat2.dir/test-mul-mat2.c.o
[ 11%] Building C object tests/CMakeFiles/test-vec0.dir/test-vec0.c.o
[ 12%] Building C object tests/CMakeFiles/test-mul-mat0.dir/test-mul-mat0.c.o
[ 13%] Building CXX object tests/CMakeFiles/test-quantize-perf.dir/test-quantize-perf.cpp.o
[ 14%] Building C object tests/CMakeFiles/test0.dir/test0.c.o
[ 15%] Building C object tests/CMakeFiles/test1.dir/test1.c.o
[ 16%] Building C object tests/CMakeFiles/test3.dir/test3.c.o
[ 17%] Building C object tests/CMakeFiles/test2.dir/test2.c.o
[ 18%] Linking C executable ../bin/test0
[ 19%] Building C object tests/CMakeFiles/test-conv-transpose.dir/test-conv-transpose.c.o
[ 20%] Building CXX object tests/CMakeFiles/test-arange.dir/test-arange.cpp.o
[ 21%] Building C object tests/CMakeFiles/test-pool.dir/test-pool.c.o
[ 22%] Building CXX object tests/CMakeFiles/test-timestep_embedding.dir/test-timestep_embedding.cpp.o
[ 23%] Linking C executable ../bin/test-vec0
[ 25%] Linking C executable ../bin/test-mul-mat0
[ 26%] Building C object tests/CMakeFiles/test-dup.dir/test-dup.c.o
[ 27%] Building C object tests/CMakeFiles/test-rel-pos.dir/test-rel-pos.c.o
[ 28%] Building C object tests/CMakeFiles/test-customop.dir/test-customop.c.o
[ 29%] Building C object tests/CMakeFiles/test-xpos.dir/test-xpos.c.o
[ 30%] Linking C executable ../bin/test2
[ 31%] Linking C executable ../bin/test3
[ 32%] Linking CXX executable ../bin/test-opt
[ 33%] Linking CXX executable ../bin/test-arange
[ 34%] Built target test0
[ 34%] Building CXX object tests/CMakeFiles/test-conv2d.dir/test-conv2d.cpp.o
[ 35%] Linking C executable ../bin/test1
[ 36%] Building CXX object tests/CMakeFiles/test-conv1d.dir/test-conv1d.cpp.o
[ 37%] Building CXX object tests/CMakeFiles/test-backend-buffer.dir/test-backend-buffer.cpp.o
[ 37%] Built target test-vec0
[ 38%] Linking C executable ../bin/test-conv-transpose
[ 39%] Building CXX object tests/CMakeFiles/test-mul-mat.dir/test-mul-mat.cpp.o
[ 40%] Built target test-mul-mat0
[ 41%] Linking CXX executable ../bin/test-grad0
[ 42%] Linking C executable ../bin/test-dup
[ 40%] Linking C executable ../bin/test-rel-pos
[ 43%] Building CXX object tests/CMakeFiles/test-backend-ops.dir/test-backend-ops.cpp.o
[ 44%] Linking C executable ../bin/test-pool
[ 45%] Building CXX object examples/CMakeFiles/common-ggml.dir/common-ggml.cpp.o
[ 46%] Linking C executable ../bin/test-customop
[ 46%] Built target test2
[ 47%] Building CXX object examples/mnist/CMakeFiles/mnist-cpu.dir/main-cpu.cpp.o
[ 47%] Built target test3
[ 48%] Building CXX object examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o
[ 48%] Built target test-opt
[ 48%] Built target test-dup
[ 48%] Built target test1
[ 48%] Built target test-arange
[ 50%] Building CXX object examples/simple/CMakeFiles/simple-ctx.dir/simple-ctx.cpp.o
[ 51%] Linking C executable ../bin/test-xpos
[ 51%] Built target test-rel-pos
[ 51%] Built target test-conv-transpose
[ 52%] Building CXX object examples/simple/CMakeFiles/simple-backend.dir/simple-backend.cpp.o
[ 52%] Built target test-grad0
[ 52%] Built target test-pool
[ 53%] Linking C executable ../bin/test-mul-mat2
[ 53%] Built target test-customop
[ 54%] Linking CXX executable ../bin/test-backend-buffer
[ 54%] Built target test-xpos
[ 55%] Linking CXX executable ../bin/test-quantize-fns
[ 55%] Built target test-mul-mat2
[ 55%] Built target test-backend-buffer
/home/ggml/work/ggml/tests/test-conv2d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 56%] Linking CXX executable ../bin/test-timestep_embedding
[ 56%] Built target test-quantize-fns
[ 57%] Linking CXX executable ../bin/test-mul-mat
[ 58%] Linking CXX executable ../bin/test-conv2d
[ 58%] Built target test-timestep_embedding
/home/ggml/work/ggml/examples/common-ggml.cpp: In function ‘bool ggml_common_quantize_0(std::ifstream&, std::ofstream&, ggml_ftype, const std::vector<std::__cxx11::basic_string<char> >&, const std::vector<std::__cxx11::basic_string<char> >&)’:
/home/ggml/work/ggml/examples/common-ggml.cpp:50:12: warning: enumeration value ‘GGML_FTYPE_MOSTLY_IQ1_M’ not handled in switch [-Wswitch]
   50 |     switch (ftype) {
      |            ^
/home/ggml/work/ggml/examples/common-ggml.cpp:177:20: warning: enumeration value ‘GGML_TYPE_I64’ not handled in switch [-Wswitch]
  177 |             switch ((ggml_type) ttype) {
      |                    ^
/home/ggml/work/ggml/examples/common-ggml.cpp:177:20: warning: enumeration value ‘GGML_TYPE_F64’ not handled in switch [-Wswitch]
/home/ggml/work/ggml/examples/common-ggml.cpp:177:20: warning: enumeration value ‘GGML_TYPE_IQ1_M’ not handled in switch [-Wswitch]
[ 59%] Linking CXX executable ../bin/test-quantize-perf
[ 59%] Built target test-mul-mat
[ 60%] Linking CXX executable ../../bin/mnist-cpu
[ 61%] Linking CXX executable ../../bin/simple-ctx
/home/ggml/work/ggml/tests/test-conv1d.cpp:24:13: warning: ‘void ggml_log_callback_default(ggml_log_level, const char*, void*)’ defined but not used [-Wunused-function]
   24 | static void ggml_log_callback_default(ggml_log_level level, const char * text, void * user_data) {
      |             ^~~~~~~~~~~~~~~~~~~~~~~~~
[ 61%] Built target test-conv2d
[ 61%] Built target test-quantize-perf
[ 62%] Linking CXX executable ../../bin/simple-backend
[ 62%] Built target mnist-cpu
[ 63%] Linking CXX executable ../bin/test-conv1d
[ 63%] Built target simple-ctx
[ 63%] Built target simple-backend
[ 63%] Built target test-conv1d
/home/ggml/work/ggml/examples/whisper/whisper.cpp: In function ‘const char* whisper_print_system_info()’:
/home/ggml/work/ggml/examples/whisper/whisper.cpp:3855:42: error: ‘ggml_cpu_has_cublas’ was not declared in this scope; did you mean ‘ggml_cpu_has_gpublas’?
 3855 |     s += "CUDA = "      + std::to_string(ggml_cpu_has_cublas())    + " | ";
      |                                          ^~~~~~~~~~~~~~~~~~~
      |                                          ggml_cpu_has_gpublas
[ 64%] Linking CXX executable ../bin/test-backend-ops
[ 64%] Built target test-backend-ops
make[2]: *** [examples/whisper/CMakeFiles/whisper-cpp.dir/build.make:76: examples/whisper/CMakeFiles/whisper-cpp.dir/whisper.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:1273: examples/whisper/CMakeFiles/whisper-cpp.dir/all] Error 2
make[1]: *** Waiting for unfinished jobs....
[ 65%] Linking CXX static library libcommon.a
[ 65%] Built target common
[ 66%] Linking CXX static library libcommon-ggml.a
[ 66%] Built target common-ggml
make: *** [Makefile:146: all] Error 2

real	0m5.397s
user	0m19.386s
sys	0m3.962s
